# mockification

./: .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py  urls.py  views.py
