[tool.poetry]
name = "mockification"
version = "0.1.0"
description = ""
authors = ["Štefan Földesi <stefan.foldesi@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
